turtleart.polygon7.Polygon7.scala.error
Erreur de compilation :
Polygon7:2: error: ';' expected but integer literal found.
  var angle:Double = 360./7
                          ^